Fixed refresh issue. MineCount added to the status bar.

--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -9,6 +9,9 @@ nav{
     background-color: $belize-hole;
     text-align:center;
   
+    .mineCount{
+    }
+
     button{
       background-color: $concrete;
       margin: 10px;
