--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-status-bar></app-status-bar>
 <table>
   <tr *ngFor="let row of board.cells; index as y;">
-    <td *ngFor="let cell of row; index as x" class="outer-block" (click)="checkCell(cell)" (contextmenu)="$event.preventDefault(); flag(cell);">
+    <td *ngFor="let cell of row; index as x" class="outer-block" (click)="checkCell(cell);" (contextmenu)="$event.preventDefault(); flag(cell);">
       <!-- <div>Status: {{cell.status}}</div> -->
       <div *ngIf="cell.status === 'clear' && !cell.mine" class="inner-block">
         <div *ngIf="cell.status === 'clear' && !cell.mine && cell.proximityMines">
